--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,31 @@
 /* You can add global styles to this file, and also import other style files */
+@import "../node_modules/bootstrap/scss/bootstrap.scss";
+@import "../node_modules/bootstrap/scss/functions";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: 'Nunito Sans', sans-serif;
+}
+
+:root {
+  /* Produto */
+  --red-dark: #BF3B44;
+  --red-mid: #F3BABD;
+  --red-light: #F4E6E7;
+
+  --green-dark: #639339;
+  --green-mid: #CBE4B4;
+  --green-light: #E5F0DB;
+
+  /* Base */
+  --gray-1: #1B1D1E;
+  --gray-2: #333638;
+  --gray-3: #5C6265;
+  --gray-4: #B9BBBC;
+  --gray-5: #DDDEDF;
+  --gray-6: #EFF0F0;
+  --gray-7: #FAFAFA;
+  --white: #FFFFFF;
+}
