not-found screen ready and created enum of RoutesPath

--- a/src/app/components/button/button.component.html
+++ b/src/app/components/button/button.component.html
@@ -1,4 +1,4 @@
-<button [ngClass]="variant()" class="button">
+<button [ngClass]="variant()" class="button" (click)="handleClick()">
   @if (useSvgIcon()) 
   {
     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-left" viewBox="0 0 16 16">
