--- a/src/app/pages/not-found/not-found.component.html
+++ b/src/app/pages/not-found/not-found.component.html
@@ -6,7 +6,7 @@
     <app-sub-title subTitleText="Que tal voltar para a entrada principal antes que o segurança ache que você está perdido de verdade?"/>
     <app-sub-title subTitleText="E lembre-se: o carrinho está sempre ali para te guiar nos momentos difíceis. 🛒"/>
     <div class="w-100">
-      <app-button buttonTitleText="Voltar às compras" [useSvgIcon]="true"/>
+      <app-button buttonTitleText="Voltar às compras" [useSvgIcon]="true" (handleClickButton)="handleClickGoBack()"/>
     </div>
   </div>
 </section>
