--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,1 +1,14 @@
-<p>home works!</p>
+<section class="p-3 responsive-layout">
+  <div class="w-100">
+    <app-header/>
+  </div>
+  <div class="content">
+    <span>Produtos</span>
+    <div class="w-100">
+      <app-button buttonTitleText="Novo produto" [variant]="'full'" [useSvgIcon]="true"/>
+    </div>
+    <div class="w-100">
+      <app-input/>
+    </div>
+  </div>
+</section>
