Fix button displays

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -4,8 +4,13 @@
   </div>
   <div class="content">
     <span>Produtos</span>
-    <div class="w-100">
-      <app-button buttonTitleText="Novo produto" [variant]="'full'" [useSvgIcon]="true"/>
+    <div class="botoes">
+      <div class="w-100">
+        <app-button buttonTitleText="Novo produto" [variant]="'full'" [useSvgIcon]="true"/>
+      </div>
+      <div class="w-100">
+        <app-button buttonTitleText="Encerrar compra" [variant]="'outline'" [useSvgIcon]="true"/>
+      </div>
     </div>
     <div class="w-100">
       <app-input/>
