--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -14,6 +14,13 @@
   margin-top: 20px;
 }
 
+.botoes {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  gap: 4px;
+}
+
 @media (min-width: 768px) {
   .responsive-layout {
     flex-direction: row;
