using icons of angular material

--- a/src/app/pages/entry/entry.component.html
+++ b/src/app/pages/entry/entry.component.html
@@ -6,7 +6,7 @@
       Só um lembrete: o valor final da sua compra pode ter uma pequena variação, tanto para mais quanto para menos. Isso acontece porque alguns descontos especiais ou ajustes podem ser aplicados diretamente no caixa. 😉"/>
     <app-sub-title subTitleText="Então, fique tranquilo e aproveite a experiência! Afinal, o importante é encher o carrinho de boas escolhas e sair daqui com um sorriso no rosto. 😄"/>
     <div class="w-100">
-      <app-button buttonTitleText="Vamos encher o carrinho!" (handleClickButton)="handleClickGoHome()"/>
+      <app-button buttonTitleText="Vamos encher o carrinho!" (handleClickButton)="handleClickGoHome()" [useSvgIcon]="true" iconPath="shopping_basket"/>
     </div>
   </div>
 </section>
