--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -1,10 +1,16 @@
 button {
   width: 100%;
-  padding: 10px;
+  padding: 3px;
   border-radius: 6px;
   border: 0;
   font-weight: 700;
   height: 48px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  gap: 4px;
 }
 
 .outline {
