home screen ready

--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -3,6 +3,11 @@
   <div class="card-divider"></div>
   <span class="card-description">{{ mockProduct()?.name }}</span>
   <div class="buttons">
-    
+    <button>
+      <mat-icon class="icon-draw" aria-hidden="true" aria-label="Example draw icon" fontIcon="draw"></mat-icon>
+    </button>
+    <button>
+      <mat-icon class="icon-delete" aria-hidden="true" aria-label="Example draw icon" fontIcon="delete"></mat-icon>
+    </button>
   </div>
 </div>
