--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,13 +1,4 @@
-<div class="card-item">
-  <span class="card-price">R$ {{ mockProduct()?.price }}</span>
-  <div class="card-divider"></div>
+<div class="card-item" (click)="handleClickProductDetails()">
   <span class="card-description">{{ mockProduct()?.name }}</span>
-  <div class="buttons">
-    <button>
-      <mat-icon class="icon-draw" aria-hidden="true" aria-label="Example draw icon" fontIcon="draw"></mat-icon>
-    </button>
-    <button>
-      <mat-icon class="icon-delete" aria-hidden="true" aria-label="Example draw icon" fontIcon="delete"></mat-icon>
-    </button>
-  </div>
+  <span class="card-price">R$ {{ mockProduct()?.price }}</span>
 </div>
