development details screen

--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,4 +1,50 @@
 <section class="w-100">
   <app-header-title />
   <app-image imagePath="assets/illustrations/basket_fruit.png"/>
+  <section class="w-100 p-3">
+    <div class="container text-center product-details">
+      <div class="row">
+        <div class="col">
+          <span class="span-title">Nome</span>
+          <span>Picanha</span>
+        </div>
+        <div class="col">
+          <span class="span-title">Preço</span>
+          <span><span class="span-title">R$ </span> 200,00</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span>CATEGORIA BADGE</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span class="span-title">Preço/Kg</span>
+          <span><span class="span-title">R$ </span> 2100,00</span>
+        </div>
+        <div class="col">
+          <span class="span-title">Peso</span>
+          <span>1.200<span class="span-title">Kg</span></span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span class="span-title">Unidade ou fardo</span>
+          <span>Unidade</span>
+        </div>
+        <div class="col">
+          <span class="span-title">Quantidade</span>
+          <span>6</span>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col">
+          <span class="span-title">Preço unitário</span>
+          <span><span class="span-title">R$ </span> 20,00</span>
+        </div>
+        <div class="col"></div>
+      </div>
+    </div>
+  </section>
 </section>
