details screen ready

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -24,3 +24,8 @@ button {
   background-color: var(--gray-2);
   color: var(--white);
 }
+
+.delete {
+  background-color: var(--red-dark) !important;
+  color: var(--white);
+}
