--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,9 +13,11 @@ html {
     typography: Roboto,
     density: 0,
   ));
+
 }/* You can add global styles to this file, and also import other style files */
 @import "../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../node_modules/bootstrap/scss/functions";
+@import 'ngx-toastr/toastr';
 
 * {
   box-sizing: border-box;
