refactor product components to use Product model and improve input handling

--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,4 +1,4 @@
 <div class="card-item" (click)="handleClickProductDetails()">
-  <span class="card-description">{{ mockProduct()?.name }}</span>
-  <span class="card-price">R$ {{ mockProduct()?.price }}</span>
+  <span class="card-description">{{ product()?.Name }}</span>
+  <span class="card-price">R$ {{ product()?.Price }}</span>
 </div>
