--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -25,7 +25,7 @@
       </div>
     </div>
     <div class="w-100">
-      <app-input/>
+      <app-input (valueTextInput)="handleOnInputTextChange($event)"/>
       <app-flatlist/>
     </div>
   </div>
