--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,1 +1,1 @@
-<input [placeholder]="placeholder()" class="common-input"/>
+<input (input)="onInputChange($event)" [placeholder]="placeholder()" class="common-input"/>
