style: :lipstick: add empty state handling for product list in flatlist component
add empty state handling for product list in flatlist component

add empty state handling for product list in flatlist component

--- a/src/app/components/flatlist/flatlist.component.html
+++ b/src/app/components/flatlist/flatlist.component.html
@@ -1,5 +1,11 @@
 <div class="flatlist">
-  @for (item of products(); track $index) {
-    <app-card-product [product]="item"/>
+  @if (products()?.length ?? 0 > 0) {
+    @for (item of products(); track $index) {
+      <app-card-product [product]="item"/>
+    }
+  } @else {
+    <div class="empty-list">
+      <span>Nenhum produto encontrado</span>
+    </div>
   }
 </div>
