feat: add category dropdown component and integrate it into new product form

--- a/src/app/pages/new-product/new-product.component.html
+++ b/src/app/pages/new-product/new-product.component.html
@@ -1,3 +1,9 @@
 <section class="w-100">
   <app-header-title [titleHeader]="'Novo produto'"/>
+  <div class="form-content">
+    <div class="w-100 form-group">
+      <app-input placeholder="Nome"/>
+      <app-category-dropdown/>
+    </div>
+  </div>
 </section>
