--- a/src/app/components/category-dropdown/category-dropdown.component.scss
+++ b/src/app/components/category-dropdown/category-dropdown.component.scss
@@ -20,7 +20,8 @@
   }
 
   &::after {
-    content: "▼";
+    content: "keyboard_arrow_down";
+    font-family: 'Material Icons';
     position: absolute;
     top: 50%;
     right: 10px;
