feat: add option selection handling to category dropdown component

--- a/src/app/components/category-dropdown/category-dropdown.component.html
+++ b/src/app/components/category-dropdown/category-dropdown.component.html
@@ -1,5 +1,5 @@
 <div class="dropdown">
-  <select>
+  <select (change)="handleSelectOptinChange($event)">
     <option value="">Selecione uma categoria</option>
     @for (category of categories; track $index) {
       <option [value]="category.value">
