--- a/src/app/pages/new-product/new-product.component.scss
+++ b/src/app/pages/new-product/new-product.component.scss
@@ -13,3 +13,35 @@
   flex-direction: column;
   gap: 5px;
 }
+
+.unit-bale-dropdown {
+  position: relative;
+  width: 100%;
+
+  select {
+    width: 100%;
+    height: 48px;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid var(--gray-4);
+    background-color: transparent !important;
+    border-radius: 6px;
+    appearance: none;
+    cursor: pointer;
+
+    &:focus {
+      outline: none;
+      border-color: var(--green-mid);
+    }
+  }
+
+  &::after {
+    content: "keyboard_arrow_down";
+    font-family: 'Material Icons';
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    pointer-events: none;
+  }
+}
