--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
-<section class="card">
-  <span>Sua compra já está em</span>
-  <h1>R$ 900,00</h1>
+<section [ngClass]="backgroundColor()"  class="card">
+  <span>{{ spanText() }}</span>
+  <h1>R$ {{ price() }}</h1>
 </section>
