--- a/src/app/pages/new-product/new-product.component.scss
+++ b/src/app/pages/new-product/new-product.component.scss
@@ -8,6 +8,19 @@
   padding: 0px 10px;
 }
 
+.card {
+  background-color: var(--gray-6);
+  border: 0;
+  width: 100%;
+  height: 96px;
+  justify-content: center;
+  text-align: center;
+
+  h1 {
+    font-weight: 700;
+  }
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
