feat: implement ControlValueAccessor for input component and update template for two-way binding

--- a/src/app/components/input/input.component.html
+++ b/src/app/components/input/input.component.html
@@ -1,1 +1,6 @@
-<input (input)="onInputChange($event)" [placeholder]="placeholder()" class="common-input"/>
+<input 
+  (input)="onInputChange($event)" 
+  [placeholder]="placeholder()" 
+  [value]="inputValue" 
+  class="common-input"
+/>
