feat: enhance new product form with dynamic final price calculation and validation logic

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,4 +1,4 @@
 <section [ngClass]="backgroundColor()"  class="card">
   <span>{{ spanText() }}</span>
-  <h1>R$ {{ price() }}</h1>
+  <h1>R$ {{ price() | number:'1.2-2' }}</h1>
 </section>
