--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,7 +26,7 @@
     </div>
     <div class="w-100">
       <app-input (valueTextInput)="handleOnInputTextChange($event)"/>
-      <app-flatlist/>
+      <app-flatlist [products]="products"/>
     </div>
   </div>
 </section>
