feat: enhance product card and home components; add final price calculation and pass total price to header

--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,4 +1,4 @@
 <div class="card-item" (click)="handleClickProductDetails()">
   <span class="card-description">{{ product()?.Name }}</span>
-  <span class="card-price">R$ {{ product()?.Price }}</span>
+  <span class="card-price">R$ {{ product()?.Price | number:'1.2-2' }}</span>
 </div>
