--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section class="p-3 responsive-layout">
   <div class="w-100">
-    <app-header/>
+    <app-header [price]="totalPrice"/>
   </div>
   <div class="content">
     <span>Produtos</span>
