--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -1,4 +1,16 @@
 <div class="card-item" (click)="handleClickProductDetails()">
-  <span class="card-description">{{ product()?.Name }}</span>
+  <div class="card-details">
+    <span class="card-description">{{ (product()?.Name || '').length > 15 ? (product()?.Name || '').slice(0, 15) + '...' : (product()?.Name || '') }}</span>
+    <span class="card-divider"></span>
+    <div class="card-details">
+      @if (_productsThatUsePerKilo.includes(product()!.CategoryOfProduct)) {
+        <span class="card-description-text">{{ product()?.Kilo }}kg x R${{product()?.PricePerKilo}}</span>
+      }
+
+      @if (_productsThatUseQuantity.includes(product()!.CategoryOfProduct)) {
+        <span class="card-description-text">({{ product()?.UnitOrBale ? 'Unidade' : 'Fardo' }}) {{ product()?.Quantity }}x R${{product()?.UnitPrice}}</span>
+      }
+    </div>
+  </div>
   <span class="card-price">R$ {{ product()?.Price | number:'1.2-2' }}</span>
 </div>
