--- a/src/app/components/card-product/card-product.component.scss
+++ b/src/app/components/card-product/card-product.component.scss
@@ -1,10 +1,22 @@
 .card-item {
   display: flex;
   align-items: center;
+  justify-content: space-between;
   background-color: transparent !important;
   border: 1px solid var(--gray-4);
   border-radius: 6px;
   padding: 10px;
+
+  .card-details {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+  }
+
+  .card-description-text {
+    font-size: 12px;
+    color: var(--gray-4);
+  }
 
   .card-price {
     font-size: 14px;
