fix: update unit label in card product component; shorten 'Unidade' to 'Uni.'

--- a/src/app/components/card-product/card-product.component.html
+++ b/src/app/components/card-product/card-product.component.html
@@ -8,7 +8,7 @@
       }
 
       @if (_productsThatUseQuantity.includes(product()!.CategoryOfProduct)) {
-        <span class="card-description-text">({{ product()?.UnitOrBale ? 'Unidade' : 'Fardo' }}) {{ product()?.Quantity }}x R${{product()?.UnitPrice}}</span>
+        <span class="card-description-text">({{ product()?.UnitOrBale ? 'Uni.' : 'Fardo' }}) {{ product()?.Quantity }}x R${{product()?.UnitPrice}}</span>
       }
     </div>
   </div>
