feat: add edit product functionality; implement routing and product retrieval in new product component

--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -54,9 +54,9 @@
         </div>
       }
     </div>
-    <div class="w-100 mb-1">
-      <app-button buttonTitleText="Editar produto" [useSvgIcon]="true" iconPath="edit"/>
-    </div>
+    <!-- <div class="w-100 mb-1">
+      <app-button buttonTitleText="Editar produto" [useSvgIcon]="true" iconPath="edit" (handleClickButton)="handleEditProduct()"/>
+    </div> -->
     <div class="w-100">
       <app-button buttonTitleText="Excluir do carrinho" [useSvgIcon]="true" iconPath="delete" [variant]="'delete'" (handleClickButton)="handleDeleteProduct()"/>
     </div>
