feat: integrate SweetAlert2 for enhanced user notifications; implement confirmation dialog for cart navigation

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -20,7 +20,7 @@
           [variant]="'outline'" 
           [useSvgIcon]="true" 
           iconPath="payments"
-          (handleClickButton)="handleClickButtonNavigation(navigationOptionsPossibilities.CART)" 
+          (handleClickButton)="handleSwallComponent()" 
         />
       </div>
     </div>
