feat: add ngx-currency dependency and update input component to support dynamic type

--- a/src/app/components/button/button.component.scss
+++ b/src/app/components/button/button.component.scss
@@ -23,6 +23,7 @@ button:disabled {
   border-width: 2px;
   border-style: solid;
   border-color: var(--gray-2);
+  color: var(--gray-2);
 }
 
 .full {
