--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,3 +49,12 @@ html {
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+.common-input {
+  border: 1px solid var(--gray-4);
+  background-color: transparent !important;
+  border-radius: 6px;
+  width: 100%;
+  padding: 10px;
+  height: 48px;
+}
