fix: update input handling in home component to use event parameter

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -26,9 +26,8 @@
     </div>
     <div class="w-100">
       <input 
-        (input)="handleOnInputTextChange()" 
-        placeholder="Pesquise pelo produto..." 
-        [value]="inputValue" 
+        (input)="handleOnInputTextChange($event)" 
+        placeholder="Pesquise pelo produto..."
         class="common-input"
         type="text"
       />
