--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 10px;
   height: 48px;
 }
+
+.error-message {
+  color: var(--red-dark);
+  padding-left: 5px;
+  font-size: 12px;
+  font-weight: 800;
+}
